# vendor_qcom_opensource_wlan

./: COMMIT_EDITMSG  README.md  test
dp/cmn_dp_api/: dp_ratetable.c  dp_ratetable.h
dp/inc/: cdp_txrx_cmn.h  cdp_txrx_cmn_reg.h  cdp_txrx_cmn_struct.h  cdp_txrx_ctrl.h  cdp_txrx_hist_struct.h  cdp_txrx_host_stats.h  cdp_txrx_ipa.h  cdp_txrx_misc.h  cdp_txrx_mlo.h  cdp_txrx_mob_def.h  cdp_txrx_mon.h  (+4 more)
fw-api/: OWNERS
htc/: htc.c  htc_internal.h  htc_send.c
platform/: Android.mk  BUILD.bazel  Kbuild  Makefile  wlan_platform_modules.bzl
platform/cnss2/: Kconfig  Makefile  bus.c  bus.h  debug.c  genl.c  main.c  main.h  pci.c  pci.h  pci_platform.h  pci_qcom.c  pineapple_consolidate_defconfig  pineapple_gki_defconfig  power.c  qmi.c  qmi.h  reg.h  sun_consolidate_defconfig  sun_gki_defconfig
platform/cnss_genl/: Kconfig  cnss_nl.c  pineapple_consolidate_defconfig
platform/cnss_prealloc/: Kconfig  Makefile  blair_gki_defconfig  cnss_prealloc.c
platform/cnss_utils/: Kconfig  blair_consolidate_defconfig  cnss_common.h  cnss_plat_ipc_qmi.c  cnss_plat_ipc_qmi.h  pineapple_gki_defconfig  wlan_firmware_service_v01.c  wlan_firmware_service_v01.h
platform/icnss2/: Kconfig  blair_consolidate_defconfig  blair_gki_defconfig  debug.c  main.c  main.h  pineapple_consolidate_defconfig  pineapple_gki_defconfig  power.c  qmi.c  qmi.h
platform/inc/: cnss2.h  cnss_nl.h  cnss_prealloc.h  icnss2.h
qca-wifi-host-cmn/: OWNERS  a
qcacld-3.0/: Android.mk  Kbuild  Kconfig  OWNERS  a  wlan_qcacld3_modules.bzl
wlan_cfg/: cfg_dp.h  wlan_cfg.c  wlan_cfg.h  wlan_init_cfg.h
(+1758 files in other folders)
